2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Avoid dropdb(1) and createdb(1); use SQL commands directly.

	* configure.in (DROPDB, CREATEDB): Delete AC_CHECK_PROGS vars.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add standard introspection support to (database postgres-meta).

	* scm/postgres-meta.scm: From module (database postgres-types),
	select also `define-db-col-type'.
	(cardinal_number): New column type specification.
	(character_data, sql_identifier): Likewise.
	(INFSCH-DEFS): New data structure: alist of information schema coldefs.
	(information-schema-names): New proc, exported.
	(information-schema-coldefs): Likewise.

	* doc/guile-pg.twerp (Standard Introspection): New node/section.
	(Funky Introspection): Likewise.
	(Introspection): Add menu for new sections.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Revamp "make check".

	* configure.in (AC_CONFIG_FILES): Remove test/config.scm.
	(AC_GUILE_PG_CONFIG_SCRIPT): Remove wily-guile; add test/runtest.
	* wily-guile.in: Delete file.

2008-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make gxrepl close connection when done.

	* scm/postgres-gxrepl.scm: From module (database postgres),
	select also `pg-finish'.
	(gxrepl): Do `pg-finish' prior to gc.

2008-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make qcons able to produce "{UNION,INTERSECT,EXCEPT} ALL".

	* scm/postgres-qcons.scm (parse+make-SELECT-tree compose): Arg
	TYPE now a rest (dotted) arg; pass w/o change to `list-sep-proc'.
	(parse+make-SELECT-tree): Handle #:union-all,
	#:intersect-all and #:except-all, as well.

2008-04-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Small refactoring: Use macro `SCM_RETURN_NEWSMOB'.

	* libpostgres.c (xc_box, xr_box, sepo_box):
	Use `SCM_RETURN_NEWSMOB'.

2008-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Jam package version in script "show-platform" on "make dist".

	* Makefile.am (dist-hook): New target.

2008-03-03 Thien-Thi Nguyen <ttn@gnuvola.org>

	Release: 0.36 (tag v0.36)
