@@ -28,9 +28,8 @@ AM_CONFIG_HEADER(config.h)
 
 AM_MAINTAINER_MODE
 
-AC_DISABLE_STATIC	dnl module only
-AC_LIBTOOL_TAGS([])
-AC_PROG_LIBTOOL
+LT_PREREQ([2.2.2])
+LT_INIT([dlopen disable-static]) dnl module only
 
 AC_PROG_CC
 
